--- a/css/reset.css
+++ b/css/reset.css
@@ -83,3 +83,14 @@ input, select {
 a{
     text-decoration:none;
 }
+
+/**
+  *html5的一些reset
+  *
+  */
+
+/*去掉点击区域透明层*/
+a,button,input{
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+    -webkit-tap-highlight-color: transparent; /* For some Androids */
+}
